.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:46:40 **** Incremental Build of configuration Debug for project MainController ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/subroutine.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/subroutine.d" -MT"Core/Src/subroutine.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/subroutine.o"
../Core/Src/subroutine.c: In function 'updateLED':
../Core/Src/subroutine.c:82:51: warning: passing argument 3 of 'HAL_TIM_PWM_Start_DMA' from incompatible pointer type [-Wincompatible-pointer-types]
   82 |         return HAL_TIM_PWM_Start_DMA(htim, timCH, ledPayload, 132);
      |                                                   ^~~~~~~~~~
      |                                                   |
      |                                                   uint16_t * {aka short unsigned int *}
In file included from ../Core/Inc/stm32g4xx_hal_conf.h:344,
                 from ../Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/subroutine.c:10:
../Drivers/STM32G4xx_HAL_Driver/Inc/stm32g4xx_hal_tim.h:2402:100: note: expected 'const uint32_t *' {aka 'const long unsigned int *'} but argument is of type 'uint16_t *' {aka 'short unsigned int *'}
 2402 | HAL_StatusTypeDef HAL_TIM_PWM_Start_DMA(TIM_HandleTypeDef *htim, uint32_t Channel, const uint32_t *pData,
      |                                                                                    ~~~~~~~~~~~~~~~~^~~~~
arm-none-eabi-gcc -o "MainController.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\asus\Documents\FIBO\FIBO Year 2 Simester 2\Studio\Firmware\Main Controller\MainController\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MainController.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MainController.elf
 
arm-none-eabi-size   MainController.elf 
arm-none-eabi-objdump -h -S  MainController.elf  > "MainController.list"
   text	   data	    bss	    dec	    hex	filename
  25580	     20	   2660	  28260	   6e64	MainController.elf
Finished building: default.size.stdout
 
Finished building: MainController.list
 
14:48:25 **** Incremental Build of configuration Debug for project MainController ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "MainController.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\asus\Documents\FIBO\FIBO Year 2 Simester 2\Studio\Firmware\Main Controller\MainController\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MainController.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MainController.elf
 
arm-none-eabi-size   MainController.elf 
arm-none-eabi-objdump -h -S  MainController.elf  > "MainController.list"
   text	   data	    bss	    dec	    hex	filename
  23024	     20	   2396	  25440	   6360	MainController.elf
Finished building: default.size.stdout
 
Finished building: MainController.list
 
14:53:35 **** Incremental Build of configuration Debug for project MainController ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:138:12: error: expected identifier or '(' before '=' token
  138 |   uint16_t = retractX();
      |            ^
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.
14:53:51 **** Incremental Build of configuration Debug for project MainController ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:138:12: warning: unused variable 'result' [-Wunused-variable]
  138 |   uint16_t result = retractX();
      |            ^~~~~~
arm-none-eabi-gcc -o "MainController.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\asus\Documents\FIBO\FIBO Year 2 Simester 2\Studio\Firmware\Main Controller\MainController\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MainController.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MainController.elf
 
arm-none-eabi-size   MainController.elf 
arm-none-eabi-objdump -h -S  MainController.elf  > "MainController.list"
   text	   data	    bss	    dec	    hex	filename
  23028	     20	   2396	  25444	   6364	MainController.elf
Finished building: default.size.stdout
 
Finished building: MainController.list
 
14:54:17 **** Incremental Build of configuration Debug for project MainController ****
make -j20 all 
arm-none-eabi-size   MainController.elf 
   text	   data	    bss	    dec	    hex	filename
  23028	     20	   2396	  25444	   6364	MainController.elf
Finished building: default.size.stdout
 
14:54:38 **** Incremental Build of configuration Debug for project MainController ****
make -j20 all 
arm-none-eabi-size   MainController.elf 
   text	   data	    bss	    dec	    hex	filename
  23028	     20	   2396	  25444	   6364	MainController.elf
Finished building: default.size.stdout
 
14:56:25 **** Incremental Build of configuration Debug for project MainController ****
make -j20 all 
arm-none-eabi-size   MainController.elf 
   text	   data	    bss	    dec	    hex	filename
  23028	     20	   2396	  25444	   6364	MainController.elf
Finished building: default.size.stdout
 
14:56:45 **** Incremental Build of configuration Debug for project MainController ****
make -j20 all 
arm-none-eabi-size   MainController.elf 
   text	   data	    bss	    dec	    hex	filename
  23028	     20	   2396	  25444	   6364	MainController.elf
Finished building: default.size.stdout
 
